// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ActionRequirement /> should default match snapshot 1`] = `
.c3 {
  margin: 0;
  padding: 0;
  font-size: 16px;
  line-height: 24px;
  color: #231B22;
  font-family: Rubik;
  font-weight: 400;
  margin-top: 16px;
  color: #6B6B78;
}

.c2 {
  margin: 0;
  padding: 0;
  font-size: 24px;
  line-height: 32px;
  color: #231B22;
  font-family: Rubik;
  font-weight: 500;
  margin-bottom: 6px;
}

.c4 {
  margin-top: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media (min-width:769px) {
  .c2 {
    max-width: 700px;
    font-size: 48px;
    line-height: 48px;
  }
}

@media (min-width:769px) {
  .c4 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    margin-top: 32px;
  }
}

@media (min-width:0px) {
  .c0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (min-width:1024px) {
  .c0 {
    -webkit-flex-direction: row-reverse;
    -ms-flex-direction: row-reverse;
    flex-direction: row-reverse;
  }
}

@media (min-width:0px) {
  .c1 {
    width: auto;
    margin-right: 0;
  }
}

@media (min-width:1024px) {
  .c1 {
    width: 520px;
    margin-right: 120px;
  }
}

<div>
  <div
    class="c0"
    title="title"
  >
    <div
      class="c1"
    >
      <h4
        aria-level="1"
        class="c2"
      >
        title
      </h4>
      <p
        class="c3"
        color="deep"
      >
        description
      </p>
      <div
        class="c4"
      />
    </div>
  </div>
</div>
`;

exports[`<ActionRequirement /> should match snapshot with aria-level 2 1`] = `
.c2 {
  margin: 0;
  padding: 0;
  font-size: 40px;
  line-height: 40px;
  color: #231B22;
  font-family: NaN Holo Condensed,Rubik;
  font-weight: 700;
}

.c3 {
  margin: 0;
  padding: 0;
  font-size: 16px;
  line-height: 24px;
  color: #231B22;
  font-family: Rubik;
  font-weight: 400;
  margin-top: 16px;
  color: #6B6B78;
}

.c4 {
  margin-top: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media (min-width:769px) {
  .c4 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    margin-top: 32px;
  }
}

@media (min-width:0px) {
  .c0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (min-width:1024px) {
  .c0 {
    -webkit-flex-direction: row-reverse;
    -ms-flex-direction: row-reverse;
    flex-direction: row-reverse;
  }
}

@media (min-width:0px) {
  .c1 {
    width: auto;
    margin-right: 0;
  }
}

@media (min-width:1024px) {
  .c1 {
    width: 520px;
    margin-right: 120px;
  }
}

<div>
  <div
    aria-level="2"
    class="c0"
    title="title"
  >
    <div
      class="c1"
    >
      <p
        aria-level="1"
        class="c2"
      >
        title
      </p>
      <p
        class="c3"
        color="deep"
      >
        description
      </p>
      <div
        class="c4"
      />
    </div>
  </div>
</div>
`;

exports[`<ActionRequirement /> should match snapshot with list 1`] = `
.c4 {
  margin-top: 24px;
}

.c3 {
  margin: 0;
  padding: 0;
  font-size: 16px;
  line-height: 24px;
  color: #231B22;
  font-family: Rubik;
  font-weight: 400;
  margin-top: 16px;
  color: #6B6B78;
}

.c5 {
  margin: 0;
  padding: 0;
  font-size: 16px;
  line-height: 24px;
  color: #231B22;
  font-family: Rubik;
  font-weight: 400;
  font-size: 16px;
}

.c6 {
  margin: 0;
  padding: 0;
  font-size: 16px;
  line-height: 24px;
  color: #231B22;
  font-family: Rubik;
  font-weight: 400;
  margin-top: 16px;
  font-size: 16px;
}

.c2 {
  margin: 0;
  padding: 0;
  font-size: 24px;
  line-height: 32px;
  color: #231B22;
  font-family: Rubik;
  font-weight: 500;
  margin-bottom: 6px;
}

.c7 {
  margin-top: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media (min-width:769px) {
  .c2 {
    max-width: 700px;
    font-size: 48px;
    line-height: 48px;
  }
}

@media (min-width:769px) {
  .c7 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    margin-top: 32px;
  }
}

@media (min-width:0px) {
  .c0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (min-width:1024px) {
  .c0 {
    -webkit-flex-direction: row-reverse;
    -ms-flex-direction: row-reverse;
    flex-direction: row-reverse;
  }
}

@media (min-width:0px) {
  .c1 {
    width: auto;
    margin-right: 0;
  }
}

@media (min-width:1024px) {
  .c1 {
    width: 520px;
    margin-right: 120px;
  }
}

<div>
  <div
    class="c0"
    list="[object Object]"
    title="title"
  >
    <div
      class="c1"
    >
      <h4
        aria-level="1"
        class="c2"
      >
        title
      </h4>
      <p
        class="c3"
        color="deep"
      >
        description
      </p>
      <div
        class="c4"
      >
        <p
          class="c5"
          font-size="medium"
        >
          <svg />
           1x/day standard access
        </p>
        <p
          class="c6"
          font-size="medium"
        >
          <svg />
           4x/month 1-on-1 sessions
        </p>
        <p
          class="c6"
          font-size="medium"
        >
          <svg />
           2x/month premium classes
        </p>
      </div>
      <div
        class="c7"
      />
    </div>
  </div>
</div>
`;

exports[`<ActionRequirement /> should match snapshot with text display 1`] = `
.c2 {
  margin: 0;
  padding: 0;
  font-size: 40px;
  line-height: 40px;
  color: #231B22;
  font-family: NaN Holo Condensed,Rubik;
  font-weight: 700;
}

.c3 {
  margin: 0;
  padding: 0;
  font-size: 16px;
  line-height: 24px;
  color: #231B22;
  font-family: Rubik;
  font-weight: 400;
  margin-top: 16px;
  color: #6B6B78;
}

.c4 {
  margin-top: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media (min-width:769px) {
  .c4 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    margin-top: 32px;
  }
}

@media (min-width:0px) {
  .c0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (min-width:1024px) {
  .c0 {
    -webkit-flex-direction: row-reverse;
    -ms-flex-direction: row-reverse;
    flex-direction: row-reverse;
  }
}

@media (min-width:0px) {
  .c1 {
    width: auto;
    margin-right: 0;
  }
}

@media (min-width:1024px) {
  .c1 {
    width: 520px;
    margin-right: 120px;
  }
}

<div>
  <div
    class="c0"
    title="title"
  >
    <div
      class="c1"
    >
      <p
        aria-level="1"
        class="c2"
      >
        title
      </p>
      <p
        class="c3"
        color="deep"
      >
        description
      </p>
      <div
        class="c4"
      />
    </div>
  </div>
</div>
`;
